[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "sp-core/default",
    "sp-application-crypto/default",
    "sp-io/default",
    "sp-runtime/default",
    "sp-std/default",
    "sp-keystore/default",
    "sp-externalities/default",
    "frame-support/default",
    "frame-system/default",
    "gadget-common/default",
    "gadget-io/default",
    "tangle-primitives/default",
    "sc-client-api",
    "sc-utils/default",
    "pallet-jobs/default",
    "pallet-dkg/default",
    "pallet-zksaas/default",
    "pallet-balances/default",
    "pallet-timestamp/default",
    "pallet-jobs-rpc-runtime-api/default"
]
wasm = [
    "sp-core/serde",
    "sp-core/full_crypto",
    "sp-application-crypto/serde",
    "sp-runtime/serde",
    "sp-io/disable_panic_handler",
    "sp-io/disable_oom",
    "sp-io/disable_allocator",
    "gadget-common/wasm",
    "gadget-io/wasm",
    "getrandom/js",
]

[dependencies]
getrandom = { workspace = true, optional = true, default-features = false }
parking_lot = { workspace = true }
futures = { workspace = true }
sp-io = { workspace = true, default-features = false }
log = { workspace = true }
async-trait = { workspace = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
gadget-common = { workspace = true, default-features = false }
gadget-core = { workspace = true }
gadget-io = { workspace = true, default-features = false }
pallet-jobs-rpc-runtime-api = { workspace = true, default-features = false }
sc-client-api = { workspace = true, optional = true, default-features = false }
sc-utils = { workspace = true, optional = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-keystore = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false, features = ["full_crypto"] }
pallet-balances = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-jobs = { workspace = true, default-features = false }
pallet-dkg = { workspace = true, default-features = false }
pallet-zksaas = { workspace = true, default-features = false }
sp-externalities = { workspace = true, default-features = false }
tangle-primitives = { workspace = true, default-features = false, features = ["verifying"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
