[package]
name = "wasm_examples"
version = "0.1.0"
authors = ["Tjemmmic <mdtjemmes@proton.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlButtonElement',
    'HtmlInputElement',
    'HtmlUListElement',
    'HtmlLiElement',
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
