[package]
name = "web-shell"
version = "0.1.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"

#[features]

[lib]
crate-type = ["cdylib"]#, "rlib"]

[dependencies]
# WASM-specific
wasm-bindgen = { version = "0.2.92" }
getrandom = { workspace = true, features = ["js"] }
wasm-bindgen-futures = { version = "0.4.42" }
tsify = { version = "0.4.5" }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
console_error_panic_hook = "0.1.7"
anyhow = "1.0.81"
libp2p-webrtc-websys = "0.3.0-alpha"
libp2p-core = "0.41.2"
libp2p-identity = { version = "0.2.8", features = ["ecdsa"] }
k256 = { version = "0.13.3", features = ["alloc", "ecdsa"], default-features = false }
#p256 = { version = "0.14.0-pre.0", features = ["alloc", "ecdsa"], default-features = false }
libp2p-webrtc-utils = "0.2.0"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.69", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Response', 'Window'] }

color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace", "issue-url"] }
async-trait = { workspace = true }
tracing = { workspace = true, features = ["log", "attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi"] }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
url = { workspace = true, features = ["serde"] }

gadget-core = { workspace = true }
gadget-common = { workspace = true, default-features = false, features = ["wasm"] }
gadget-io = { workspace = true, default-features = false, features = ["wasm"] }

sp-core = { workspace = true, features = ["serde", "full_crypto"] }
sp-io = { workspace = true, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-keystore = { workspace = true }
sp-application-crypto = { workspace = true, features = ["serde", "full_crypto"] }
sp-std = { workspace = true, default-features = false }

tangle-subxt = { workspace = true, features = ["wasm"] }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }

structopt = "0.3.26"
toml = "0.8.11"
serde = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = "0.10.8"
futures = { workspace = true }
bincode2 = { workspace = true }
array-bytes = { version = "6.2.2" }
parking_lot = { workspace = true }

# Protocols
#dfns-cggmp21-protocol = { workspace = true }
#zcash-frost-protocol = { workspace = true, default-features = false, features = ["wasm"] }
#silent-shard-dkls23-ll-protocol = { workspace = true }
#threshold-bls-protocol = { workspace = true }
#zk-saas-protocol = { workspace = true, features = ["parallel"] }

[dependencies.libp2p]
workspace = true
features = [
    "tokio", #
    "gossipsub", #
#    "mdns",
    "noise", #
    "macros", #
    "yamux", #
    "tcp", #
    "quic", #
    "request-response",
    "cbor",
    "identify",
    "kad",
    "dcutr", #
    "relay", #
    "ping", #
    "dns", #
    "wasm-bindgen", #
    "ed25519" #
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
#test-utils = { workspace = true }
