[package]
name = "webb-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
mpc-net = { workspace = true }
tokio-rustls = { workspace = true }
gadget-core = { workspace = true, features = ["substrate"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio-util = { version = "0.7.9" }
async-trait = { workspace = true }
log = "0.4.20"
parking_lot = "0.12.1"
auto_impl = "1.1.0"
sc-client-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }