[package]
name = "webb-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
mpc-net = { workspace = true }
tokio-rustls = { workspace = true }
gadget-core = { workspace = true, features = ["substrate"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio-util = { version = "0.7.9" }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
auto_impl = "1.1.0"
sc-client-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
hex = { workspace = true }