[package]
name = "webb-gadget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
gadget-core = { workspace = true, features = ["substrate"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
sc-client-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
hex = { workspace = true }
bincode2 = { workspace = true }